assets/css/v2/elevator/elevator_closures.scss
.elevator-closures {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  font-family: Inter, sans-serif;
  background-color: $warm-neutral-90;

  .in-station-summary {
    display: flex;
    justify-content: space-between;
    padding: 24px 58px;
    font-size: 48px;
    font-weight: 400;
    line-height: 64px;
    color: $cool-black-30;
  }

  hr.thick {
    min-height: 24px;
    margin: 0;
    background-color: $cool-black-15;
    border: none;
  }

  hr.thin {
    min-height: 2px;
    margin: 24px 0 0;
    background-color: $true-grey-45;
    border: none;
    opacity: 0.5;
  }

  .outside-alert-list {
    position: relative;
    height: 100%;
    font-family: Inter;
    background-color: $warm-neutral-90;

    .header-container {
      margin: 48px;
      margin-bottom: 0;

      .header {
        display: flex;
        max-height: 432px;
        font-size: 112px;
        font-weight: 700;
        line-height: 112px;

        &__title {
          word-spacing: 9999px;
        }
      }
    }

    .alert-list-container {
      overflow: hidden;

      .alert-list {
        display: flex;
        flex-flow: column wrap;
        height: 904px;
        transform: translateX(calc(-100% * var(--alert-list-offset)));

        .alert-row {
          margin: 24px 48px 0;

          &__station-name {
            font-size: 62px;
            font-weight: 600;
            line-height: 80px;
            color: $cool-black-15;
          }

          &__name-and-pills {
            display: flex;
            gap: 24px;
            align-items: center;
            margin-bottom: 14px;

            .route-pill {
              width: 132px;
              height: 68.13px;
            }
          }

          &__elevator-name.list-item {
            display: list-item;
            margin-bottom: 8px;
            margin-left: 48px;
          }
        }
      }
    }

    .paging-info-container {
      display: flex;
      justify-content: space-between;
      margin: 0 48px;

      .paging-indicators {
        display: flex;
        gap: 27px;
        align-items: center;
        margin-right: 66px;
      }
    }

    .paging-info-container,
    .alert-row__elevator-name {
      font-size: 48px;
      font-weight: 400;
      line-height: 64px;
      color: $cool-black-30;
    }
  }
}

